fix css code and align image and text

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,57 +1,103 @@
-
-nav{
-    position: sticky;
-    width: 100%;
-    left:0;
-    box-shadow:0 4px 4px #1f2622;
-    color: bisque;
-    top: 100%#
-}
-#menu{
-    list-style-type: none;
-    font-size: 1.1rem;
-}
-#menu a{
-    text-decoration: none;
-}
-body{
+body {
     background-color: #4d5d53;
     color: bisque;
+    margin: 0;
+    font-family: Arial, sans-serif;
 }
-#welcome{
-    background-color: #dce3c7;
-    color:#4d5d53;
-    text-align:center;
-}
-#drinks{
-    background-color: #fff8de;
-    color: #4d5d53;
-}
-#hero{
-    background:url("../images/ai-pvBridge3.jpeg") no-repeat center center/cover;
-    position: absolute;
+
+.navbar {
+    position: sticky;
     width: 100%;
-    height: 500;
+    left: 0;
+    top: 0;
+    box-shadow: 0 4px 4px #1f2622;
+    background-color: antiquewhite;
+    z-index: 1000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 60px;
+}
+
+.nav-menu {
+    list-style-type: none;
+    font-size: 1.2rem;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.nav-menu li {
+    display: inline;
+    margin: 0 15px;
+}
+
+.nav-menu a {
+    text-decoration: none;
+    color: #4d5d53;
+    font-weight: bold;
+}
+
+.nav-menu a:hover {
+    text-decoration: solid;
+}
+
+#hero {
+    background: url("../images/ai-pvBridge3.jpeg") no-repeat center center/cover;
+    position: relative;
+    width: 100%;
+    height: 300px;
     display: flex;
     align-items: flex-end;
     justify-content: center;
 }
-#hero-text{
-background-color: rgba(248, 240, 204, 0.6);
-font-size: 120%;
-color: #1f2622;
-text-align: center;
-flex-wrap: wrap;
-padding top:40px;
+
+#hero-text {
+    background-color: rgba(248, 240, 204, 0.6);
+    font-weight: 600;
+    color: #1f2622;
+    text-align: center;
+    flex-wrap: wrap;
+    padding: 10px;
+    height: 60px;
+    overflow: hidden;
 }
 
-#food-home{
-    max-width: 150px;
-    padding:20px;
-    border-radius: 15%;
-}
-#food{
-    margin-top: 30px;
+#welcome h2 {
+    font-weight: bolder;
     text-align: center;
-    padding: 5%;
+    color: #8fe9b1;
+    width: 100%;
+}
+
+#pv-welcome{
+    font-size: 1em;
+    margin: 0 auto;
+    padding: 0.5em;
+}
+
+#food {
+    background-color: #dce3c7;
+    color: #4d5d53;
+    text-align: center;
+    overflow: hidden;
+    padding: 20px;
+}
+
+#food-home-img {
+    max-width: 10rem;
+    width: 10rem;
+    padding: 20px;
+    border-radius: 15%;
+    float: left;
+}
+
+
+#drinks {
+    background-color: #fff8de;
+    color: #4d5d53;
+    padding: 20px;
 }
